image size, loading , and analytics added

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ i {
 .container {
 	max-width: 900px;
 	margin: 0 auto;
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: rgba(255, 255, 255, 0.6);
 }
 
 .container2 {
@@ -341,6 +341,7 @@ i {
   padding: 20px;
 }
 .foot_back{
+	text-align: center;
       /* background: #d8c4b7; */
 }
 
@@ -349,6 +350,7 @@ i {
 }
 
 .heart{
+	margin:0;
   color: red;
   animation: beat .25s infinite alternate;
   padding: 0px 5px;
