--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	font-family: 'Nunito', sans-serif;
 }
 
+a{
+	text-decoration: none;
+}
+
 body {
 	font-family: 'Nunito', sans-serif;
 	margin: 0px;
